@@ -979,7 +979,7 @@ diagram(ad2, xlab = xlab, balance = 1, names = names)
 title(bquote("Fe and/or Cu; 2° balance:" ~ .(expr.species("H+"))))
 label.plot("E")
 
-db <- describe.basis(ibasis = 3)
+db <- describe.basis(3)
 leg <- lex(lTP(400, 2000), db)
 legend("bottomleft", legend = leg, bty = "n")
 ```
